gcc/ 	Backport from 2016-06-16 trunk r237536. 	2016-06-16  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com> 	PR target/71151 	* config/avr/avr.c (avr_asm_init_sections): Remove setup of 	progmem_swtable_section. 	(progmem_swtable_section): Remove. 	(avr_asm_function_rodata_section): Remove. 	(TARGET_ASM_FUNCTION_RODATA_SECTION): Remove. 	* config/avr/avr.h (JUMP_TABLES_IN_TEXT_SECTION): Define to 1.

testsuite/
	Backport from 2016-06-16 trunk r237536, r237910.
	2016-06-16  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>
	PR target/71151
	* gcc.target/avr/pr71151-1.c: New test.
	* gcc.target/avr/pr71151-2.c: New test.
	* gcc.target/avr/pr71151-3.c: New test.
	* gcc.target/avr/pr71151-4.c: New test.
	* gcc.target/avr/pr71151-5.c: New test.
	* gcc.target/avr/pr71151-6.c: New test.
	* gcc.target/avr/pr71151-7.c: New test.
	* gcc.target/avr/pr71151-8.c: New test.
	* gcc.target/avr/pr71151-common.h: New file.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-6-branch@238935 138bc75d-0d04-0410-961f-82ee72b054a4